--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,9 @@
         "psr-4": {
             "Ashin33\\QnApi\\": "src"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.2",
+        "mockery/mockery": "^1.6"
     }
 }
