--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,6 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.2",
-        "mockery/mockery": "^1.6"
+        "phpunit/phpunit": "^9.5.8"
     }
 }
